<resources>
    <string name="app_name">DayPos</string>

    <string name="login_txt">Please <b>Login</b>\nto manage your store</string>
    <string name="forgot_password_txt">Please enter your registered email id\nto reset your password.</string>
    <string name="reset_password_txt">Please enter your new password.</string>

    <string name="email_id">Email id</string>
    <string name="email_id2">Registered email id</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="hint_otp">Enter OTP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="register_here">Don\'t have account? Register here&#8230;</string>

    <string name="copyright_txt">\@Copyright DAYPOS</string>

    <string name="registration_txt">Create new account</string>

    <string name="full_name">Full name</string>
    <string name="f_name">First name</string>
    <string name="l_name">Last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_my_ac">CREATE MY ACCOUNT</string>


    <string name="goto_login">Already have account? <font color='blue'>Back to Login</font></string>
    <string name="privacy1">I am agreed with the store\'s</string>
    <string name="privacy2">Privacy Policy</string>


    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter password</string>
    <string name="err_msg_min_6_character_password">Minimum 6 character</string>
    <string name="err_msg_con_password">Enter confirm password</string>
    <string name="err_msg_not_match">Password not match</string>
    <string name="err_msg_mobile">Enter mobile number</string>
    <string name="err_msg_10digit_mobile">Enter 10-digit mobile number</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="hint_search_cat">Search Category</string>
    <string name="title_parent_cat">Parent Category</string>
    <string name="title_cat_name">Category Name</string>
    <string name="title_cat_color">Category Color</string>
    <string name="save">Save</string>
    <string name="assign_item">ASSIGN ITEM/PRODUCTS</string>
    <string name="create_item">CREATE ITEM/PRODUCTS</string>
    <string name="delete_cat">DELETE CATEGORY</string>


    <string name="title_product_name">Product Name</string>
    <string name="title_select_cat">Select Category</string>
    <string name="title_selling_unit">Selling Unit</string>
    <string name="title_selling_price">Selling Price</string>
    <string name="title_sku">SKU</string>
    <string name="title_barcode">Barcode</string>
    <string name="product_color">Product Color</string>
    <string name="product_image">Image</string>
    <string name="hint_search_product">Search Product</string>
    <string name="hint_search_customer">Search Customer</string>
    <string name="hint_search">Search</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="not_get_password_resend">Not get any OTP? <font color='blue'>Resend it</font></string>




    <string name="goto_cart">Goto Cart</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>




    <!--For thermal Epson printer..............-->

    <string name="title_target">Target</string>

    <string name="discovery_label_printerlist">Printer List :</string>
    <string name="printerseries_m10">Epson TM-m10 Series</string>
    <string name="printerseries_m30">Epson TM-m30 Series</string>
    <string name="printerseries_p20">Epson TM-P20 Series</string>
    <string name="printerseries_p60">Epson TM-P60 Series</string>
    <string name="printerseries_p60ii">Epson TM-P60II Series</string>
    <string name="printerseries_p80">Epson TM-P80 Series</string>
    <string name="printerseries_t20">Epson TM-T20 Series</string>
    <string name="printerseries_t60">Epson TM-T60 Series</string>
    <string name="printerseries_t70">Epson TM-T70 Series</string>
    <string name="printerseries_t81">Epson TM-T81 Series</string>
    <string name="printerseries_t82">Epson TM-T82 Series</string>
    <string name="printerseries_t83">Epson TM-T83 Series</string>
    <string name="printerseries_t88">Epson TM-T88 Series</string>
    <string name="printerseries_t90">Epson TM-T90 Series</string>
    <string name="printerseries_t90kp">Epson TM-T90KP Series</string>
    <string name="printerseries_u220">Epson TM-U220 Series</string>
    <string name="printerseries_u330">Epson TM-U330 Series</string>
    <string name="printerseries_l90">Epson TM-L90 Series</string>
    <string name="printerseries_h6000">Epson TM-H6000 Series</string>
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>

    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_ex_open">Please check the connection of the printer and the mobile terminal.\nFailed to open communication port.\n</string>
    <string name="handlingmsg_ex_connect">Please reconnect the printer and the mobile terminal.\nFailed to communicate with the printer.\n</string>
    <string name="handlingmsg_ex_timeout">Please check the connection of the printer and the mobile terminal.\nCommunication has timed out.\n</string>
    <string name="handlingmsg_ex_off_line">Printer is offline.\n</string>
    <string name="handlingmsg_ex_failure">Please check communication settings of the mobile terminal and application execution environment.\nUnknown error has occurred.\n</string>
    <string name="handlingmsg_ex_application_error">Please contact developer of this application.\nApplication error has occurred.\n</string>
    <string name="handlingmsg_notice_printer_problems">Printer problems:\n</string>
    <string name="handlingmsg_notice_failed">Failed to get printer status.\n</string>
    <string name="handlingmsg_err_offline">Printer is offline.\n</string>

    <string name="model_ank">ANK</string>
    <string name="model_japanese">JAPANESE</string>
    <string name="model_chinese">CHINESE</string>
    <string name="model_taiwan">TAIWAN</string>
    <string name="model_korean">KOREAN</string>
    <string name="model_thai">THAI</string>
    <string name="model_southasia">SOUTH ASIA</string>
    <string name="pleasewaitamoment">Please wait a moment...</string>


</resources>
