<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.Login"
    android:background="@color/bg_1"
    >

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@mipmap/logo_300"
        />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_txt"
        android:layout_below="@+id/iv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_centerInParent="true"
        >
        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_only"
            android:padding="10dp"
            android:hint="@string/email_id2"
            android:autofillHints="@string/email_id2"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_only"
            android:padding="10dp"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:padding="5dp"
            android:textColor="@color/blue"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border_red"
            android:layout_marginTop="20dp"
            android:text="@string/register_here"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textSize="16sp"
            />

    </LinearLayout>
    

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="15dp"
        android:text="@string/copyright_txt"
        android:gravity="center"
        />



</RelativeLayout>