<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.Login"
    android:background="@color/bg_1"
    >

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@mipmap/logo_300"
        />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reset_password_txt"
        android:layout_below="@+id/iv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_centerInParent="true"
        >
        <EditText
            android:id="@+id/edt_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_only"
            android:padding="10dp"
            android:hint="@string/hint_otp"
            android:autofillHints="@string/hint_otp"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_only"
            android:padding="10dp"
            android:hint="@string/new_password"
            android:autofillHints="@string/new_password"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_only"
            android:padding="10dp"
            android:hint="@string/confirm_password"
            android:autofillHints="@string/confirm_password"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            />




        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:text="SAVE PASSWORD"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tv_resend_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/not_get_password_resend"
            />



    </LinearLayout>
    

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="15dp"
        android:text="@string/copyright_txt"
        android:gravity="center"
        />

</RelativeLayout>