<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            android:background="@color/colorAccent"
            app:titleTextColor="@color/white"
            android:gravity="end"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                >

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/tv_save_cat"
                    android:text="Add Category"
                    />

                <TextView
                    android:id="@+id/tv_save_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:drawableEnd="@mipmap/icon_save"
                    android:drawablePadding="5dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_cat_name"
                android:textSize="14sp"
                />

            <EditText
                android:id="@+id/edt_cat_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:textSize="14sp"
                android:padding="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border_color"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_cat_color"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>






            <Button
                android:id="@+id/btn_assign_item"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="20dp"
                android:text="@string/assign_item"
                android:textColor="@color/white"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/btn_create_item"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/border_red"
                android:layout_marginTop="20dp"
                android:text="@string/create_item"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:visibility="gone"
                />


            <Button
                android:id="@+id/btn_delete_cat"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/border_grey"
                android:layout_marginTop="20dp"
                android:text="@string/delete_cat"
                android:textColor="@color/black"
                android:gravity="center"
                android:visibility="gone"
                />


        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"/>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>